# vypyr

./: .gitignore  Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  launchvypyr  launchvypyr.in  setup.py
src/vypyr/: Makefile  Makefile.am  Makefile.in  application.py  main_dialog.ui
